src/test/ui/parser/issue-20711-2.ds
struct Foo;

impl Foo {
    fn foo() {}

    #[stable(feature = "dust1", since = "1.0.0")]
    //~^ ERROR expected item after attributes
}

fn main() {}
